2008-05-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Import of the new TLS port driver.

	* configure.ac: Always check for OpenSSL, not only when the compat
	layer is enabled.

	* src/core/exmpp_tls.erl, c_src/exmpp_tls_openssl.c, src/Makefile.am,
	src/Emakefile.in, c_src/Makefile.am, ebin/Makefile.am,
	ebin/exmpp.app.in: Add exmpp_tls and its associated port driver.

	* src/core/exmpp_tls.erl, c_src/exmpp_tls_openssl.c: Add
	controlling_process/2 and close/1 functions. Allow the underlying
	socket to return data as lists. Allow the caller to send data as list;
	the receive part is done but the option isn't available yet. Fix
	handshake for the client side. When the handshake fails, the port
	driver now returns the reason string provided by OpenSSL. Until a real
	verify_callback is made, any certificate is accepted.

	* src/core/exmpp_tls.erl: Add basic documentation. Fix $Id$ tag.
	(recv/3): Add real timeout support.

	* src/core/exmpp_sup.erl: Start exmpp_tls.

2008-05-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/Makefile.am: Fixed distributed files list.

	* c_src/exmpp_expat.c, c_src/exmpp_stringprep.c: style(9).

	* src/core/exmpp_internals.erl (load_driver): Add a clause to allow
	the caller to specify the directories list where the driver should be
	found.

2008-05-20  Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/network/exmpp_ssl.erl: Fix compatibility bug with old OTP
	versions that doesn't allow the reuseaddr option in ssl sockets.

	* src/network/exmpp_ssl.erl: Refactor the code, using exmpp_tcp.erl as
	a model.

2008-05-13  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/exmpp_expat.c, c_src/Makefile.am, c_src/Makefile.unix,
	src/core/exmpp_xml.erl: Rename 'exmpp_expat_drv' to 'exmpp_expat'.

	* c_src/exmpp_stringprep.c, c_src/Makefile.am, c_src/Makefile.unix,
	src/core/exmpp_stringprep.erl: Rename 'exmpp_stringprep_drv' to
	'exmpp_stringprep'.
