@@ -1,3 +1,7 @@
+2008-05-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* src/core/exmpp_tls.erl: Fixed some issues with documentation.
+
 2008-05-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	Import of the new TLS port driver.
